@@ -6,6 +6,7 @@
 #    yt/server/master/cell_master/serialize.cpp - if the version differs, then the update should be done with master snapshots (+ --set-read-only).
 #    yt/server/node/tablet_node/serialize.cpp - if the version differs, then the update should be done with tablet cell recreation.
 
+* avmatrosov: Added copy for replicated tables. Update masters via snapshot.
 * ifsmirnov: Estimated creation time map. Update masters via snapshot.
 * akozhikhov: Added new users for tablet system activity. Update masters via snapshot.
 * babenko: Some recent fix in portal destruction requires masters to be updated via snapshot.
